# talk-booking

./: .gitlab-ci.yml
.github/workflows/: .github-ci.yml
infrastructure/global/vpc/: ci-cd.yml  main.tf
infrastruture/global/vpc/: ci-cd.yml  main.tf
services/talk_booking/: .flake8  ci-cd.yml  pyproject.toml
services/talk_booking/tests/integration/test_web_app/: test_main.py
