[tool.poetry]
name = "talk-booking"
version = "0.1.0"
description = ""
authors = ["yohel2022 <aldahyr.yohel@gmail.com>"]
readme = "README.md"
packages = [{include = "talk_booking"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
